[tool.poetry]
name = "kba-exa-roboqa"
version = "0.1.0"
description = ""
authors = ["Pavel Zemlianikin <zzzp@kbais.org>"]
packages = [{include = "roboqa_web", from = "packages"}]
readme = "README.md"

[tool.poetry.scripts]
web_start = "packages.roboqa_web.main:run"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
aiogram = "^3.3.0"
gql = {extras = ["aiohttp"], version = "^3.5.0"}
redis = "^5.0.1"
dependency-injector-fork = "^4.42.1"
dramatiq = {extras = ["redis", "watch"], version = "^1.16.0"}
markdownify = "^0.11.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
